...
            <point key="canvasLocation" x="38" y="-657"/>
        </scene>
        <!--Window Controller-->
        <scene sceneID="W9H-uF-CUX">
            <objects>
                <windowController storyboardIdentifier="LibraryWindow" showSeguePresentationStyle="single" id="yDF-ev-IJU" sceneMemberID="viewController">
                    <window key="window" title="Library" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" titleVisibility="hidden" id="tx4-bF-DL9">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
                        <toolbar key="toolbar" implicitIdentifier="CBAB20BB-723C-4349-A3CA-2DC0A1DFA63A" autosavesConfiguration="NO" allowsUserCustomization="NO" showsBaselineSeparator="NO" displayMode="iconOnly" sizeMode="small" id="u3A-p7-QWV">
                            <allowedToolbarItems>
                                <toolbarItem implicitItemIdentifier="D6859C5E-9D8E-4409-ABC3-C73242976BFD" label="Search" paletteLabel="Search" sizingBehavior="auto" id="C9e-fP-RUy" userLabel="Search">
                                    <nil key="toolTip"/>
                                    <searchField key="view" wantsLayer="YES" verticalHuggingPriority="750" textCompletion="NO" id="KwN-mg-aBN">
                                        <rect key="frame" x="0.0" y="14" width="220" height="22"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                        <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Search Title" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" id="SQR-CM-yfn">
                                            <font key="font" metaFont="system"/>
                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                        </searchFieldCell>
                                        <connections>
                                            <action selector="searchStory:" target="MmW-hR-IlJ" id="l6x-A6-aWd"/>
...
